# underground-crm

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  start_containers.sh  update-gnaf.sh
.github/workflows/: ci.yml
docker/: gnaf-package.json
docs/: migrating_finances.md
migration/: config.py  fetch_all_interactions.py  fetch_all_private_notes.py  fetch_legacy_site.py  fetch_pages.py  migrate_donations.py
underground_crm/: addressr.py  admin.py  apps.py  blocks.py  contactability.py  context_processors.py  fields.py  logging_config.py  middleware.py  numbers.py  panels.py  sanitization.py  settings.py  signals.py  site_urls.py  social_adapters.py  tasks.py  urls.py  wagtail_hooks.py
underground_crm/api/: permissions.py  serializers.py  urls.py  views.py
underground_crm/forms/: auth.py  person_filter.py
underground_crm/migrations/: 0001_initial.py  0002_basicpage.py  0002_pages.py  0003_alter_donation_amount_currency_and_more.py  0003_interaction_legacy_contact_id.py  0004_alter_basicpage_body.py  0004_basicpage_search_image.py  0004_historicalperson.py  0005_alter_basicpage_body.py  0005_basicpage_og_type.py  0010_blog.py  (+26 more)
underground_email/: README.md  api.py  app_settings.py  blocks.py  image_formats.py  models.py  tasks.py  unsubscription.py  urls.py  wagtail_hooks.py
underground_payments/: README.md  app_settings.py  apps.py  checkStripeCountries.sh  models.py  tasks.py  urls.py  views.py  wagtail_hooks.py
(+77 files in other folders)
